// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> matches snapshot 1`] = `
<div>
  <div
    class="progress css-52ir5y-progressBarStyles-progressBarStyles"
    id="my-progress-1"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          75‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> matches snapshot with zero percent 1`] = `
<div>
  <div
    class="css-r7ie7l-progressBarStyles-progressBarStyles"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          0‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> renders correctly with custom radius 1`] = `
<div>
  <div
    class="css-1rv0rhn-progressBarStyles-progressBarStyles"
  >
    <div
      class="progress-bar-container"
    >
      <div
        class="percentage-container"
      >
        <div
          class="css-n6kbpa-percentageStyles-percentageStyles"
          data-testid="percentage"
        >
          75‏%
        </div>
      </div>
    </div>
  </div>
</div>
`;
